--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.platform=org.hibernate.dialect.PostgreSQLDialect
 
 # App security Properties
 namnd.app.jwtSecret=jwtGrokonezSecretKey
-namnd.app.jwtExpiration=86400
+namnd.app.jwtExpiration=6000000
